# 5293-LLM-project

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Inesh_Felix_pipeline_development_log.ipynb  README.md  main_agent-2.ipynb  main_agent_(1).ipynb  pyproject.toml  requirements-evaluation.txt  requirements.txt
.github/workflows/: tests.yml
docs/: experiment_setup.md  troubleshooting.md
notebooks/: demo.ipynb  evaluation.ipynb
src/: extract_pdf_text_with_ocr.py
src/research_agent/: __init__.py  agents.py  citations.py  documents.py  embeddings.py  grounding.py  paper_quotes.py  quote_search.py  routing.py  text_utils.py  tools.py
test_cases/: sample_upload_test_document.txt
tests/: test_basic.py  test_citations.py  test_demo_inputs.py  test_documents.py  test_embeddings_pooling.py  test_grounding.py  test_quote_search_logic.py  test_routing.py  test_text_utils.py
